--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
 
         <activity android:name=".MainActivity" />
 
+        <activity android:name=".pages.DetailActivity" />
 
         <activity
             android:name=".pages.HomeActivity"
